--- a/binder-annotations/build.gradle
+++ b/binder-annotations/build.gradle
@@ -5,5 +5,5 @@ dependencies {
     compileOnly 'com.android.support:support-annotations:27.1.1'
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
