--- a/binder/build.gradle
+++ b/binder/build.gradle
@@ -8,9 +8,8 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     buildTypes {
